minecraft/minecraft-ingress.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRouteTCP
metadata:
  name: minecraft-ingress
  namespace: minecraft
spec:
  entryPoints:
    - minecraft
  routes:
  - match: HostSNI(`*`)
    services:
    - name: minecraft-service
      port: 25565
